--- a/templates/cron.html
+++ b/templates/cron.html
@@ -19,7 +19,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-menu-down"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Cron Date & Time</h2>
                   </span>  
                 </div>  
@@ -61,7 +61,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-menu-down"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Repeat Interval</h2>
                   </span>  
                 </div>  
