--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ audio:not([controls]) {
  */
 html {
   font-size: 100%;
+  height: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%; }
 
@@ -86,7 +87,9 @@ html {
  * Addresses margins handled incorrectly in IE6/7
  */
 body {
-  margin: 0; }
+  margin: 0;
+  position: relative;
+  height: 100%; }
 
 /* =============================================================================
    Links
@@ -423,7 +426,7 @@ body {
   font-variant: normal;
   line-height: 18px;
   color: #6f5499;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   /* Stops Mobile Safari from auto-adjusting font-sizes */
   -webkit-text-size-adjust: 100%;
@@ -432,8 +435,19 @@ body {
 
 #page {
   /*max-width: 1500px;*/
-  margin: 0 auto; }
+  margin: 0 auto;
+  position: relative;
+  height: 100%; }
 
+.gradient-bg {
+background: #e6edfa;
+background: -moz-linear-gradient(top,  #e6edfa 0%, #e6edfa 29%, #f3e7e9 100%);
+background: -webkit-linear-gradient(top,  #e6edfa 0%,#e6edfa 29%,#f3e7e9 100%);
+background: linear-gradient(to bottom,  #e6edfa 0%,#e6edfa 29%,#f3e7e9 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6edfa', endColorstr='#f3e7e9',GradientType=0 );
+
+padding: 0;
+}
 .blur {
  -webkit-transition: all 0.3s ease-out; 
      -moz-transition: all 0.3s ease-out; 
@@ -596,7 +610,7 @@ ul.no-list {
 }
 
 .login-container {
-  padding-top: 3%;
+  padding-top: 19%;
   padding-bottom: 1%;
   vertical-align: middle;
 }
@@ -606,14 +620,29 @@ ul.no-list {
 }
 .login-register-block-main {
   margin-bottom: 20px;
+  margin-top: 20px;
 }  
 .form-box {
+  position: relative;
   background: #fff;  
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
-  border: 1px solid #e1e8ed;
   padding: 27px 30px 25px;
+  box-shadow: rgba(0, 0, 0, 0.6) 0px 3px 10px -3px;
+}
+
+.circle {
+  width: 140px;
+  height: 140px;
+  background: #fff; 
+  -moz-border-radius: 70px; 
+  -webkit-border-radius: 70px; 
+  border-radius: 70px;
+  position: absolute;
+  margin-top: -80px;
+  right: -45px;
+  z-index: 100;
 }
 
 .panel-description {
