--- a/templates/login-form.html
+++ b/templates/login-form.html
@@ -1,32 +1,36 @@
-          <div class="form-box animated" ng-class="{'pulse': !formLoaded}">
-            <p class="login-title">
-              <span>Log in to start your session</span>
-            </p>  
+          <div class="form-box form-box-shake animated" ng-class="{'pulse': !formLoaded}">
+            <div class="row" style="margin-top:10px;">
+              <div class="horz-line" style="height: 10px; text-align: center; margin-left:25px; margin-right:34px">
+                <span style="background-color:#fff; padding: 0 10px;">
+                  <h2 style="display:inline;">
+                    <strong>Log in to start your session</strong>
+                  </h2>  
+                </span>
+              </div>
+            </div>
             <div id="block-system-main" class="login-register-block-main">
               <div class="login-content clearfix">
                 <form ng-submit="submitLogin(credentials)" method="post">
-                  <div class="row clearfix" style="margin-top:20px; margin-bottom:20px;">
-                    <div class="col-md-12">
-                      <label>Username</label>
-                      <div class="input-group">
-                        <span class="input-group-addon">U</span>
-                        <input type="text" class="form-control" required="required" ng-model="credentials.username">    
-                      </div>
+                  <div class="row clearfix" style="margin-top:20px; margin-bottom:20px; display:flex; align-items:center;">
+                    <div class="col-md-1">
+                      <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-md-10">
+                      <input type="text" class="form-control" required="required" ng-model="credentials.username" placeholder="Username">    
                     </div>
                   </div>
-                  <div class="row" style="margin-bottom:20px;">    
-                    <div class="col-md-12">
-                      <label>Password</label>
-                      <div class="input-group">
-                        <span class="input-group-addon">P</span>
-                        <input type="password" class="form-control" required="required" ng-model="credentials.password">    
-                      </div>
+                  <div class="row" style="margin-bottom:20px; display:flex; align-items:center;">    
+                    <div class="col-md-1">
+                      <i class="fa fa-key fa-2x" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-md-10">
+                      <input type="password" class="form-control" required="required" ng-model="credentials.password" placeholder="Password">    
                     </div>
                   </div>  
-                  <div class="table-buttons">
-                    <div class="btn-group btn-group-justified" role="group">
+                  <div class="row table-buttons">
+                    <div class="btn-group btn-group-justified col-md-4 col-md-offset-1" role="group" style="width:30%">
                       <div class="btn-group" role="group">
-                        <input class="btn btn-primary" ng-class="{'disabled': !loginFormComplete()}" type="submit" value="Log in">
+                        <input class="btn btn-primary" ng-class="{'disabled': !loginFormComplete()}" type="submit" value="Login">
                       </div>
                     </div>
                   </div>
