--- Added text to questionnaires

--- a/templates/home.html
+++ b/templates/home.html
@@ -135,7 +135,7 @@
 												<h1>Questionnaires</h1>
 											</div>  
 											<div class="panel-description">
-												<p>Tool for referencing educational material hosted on the web.</p>
+												<p>Manage patient-reported outcome questionnaires.</p>
 											</div>
 										</div>
 									</div>
