--- a/templates/add-notification.html
+++ b/templates/add-notification.html
@@ -9,7 +9,7 @@
                   <div class="logo">
                     <img style="margin-top: -20px;" class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="130" width="130">
                   </div>
-                  <h1 class="animated fadeIn">opal <strong>ADMIN</strong> </h1>
+                  <h1 class="animated fadeIn">opal <strong>ADMIN</strong> <span style="font-size: 20px;" ng-if="devMode">DEV</span></h1>
                 </div>
               </div>   
             </div>  
