--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
               <div class="logo">
                 <img class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="120" width="120">
               </div>
-              <h1 class="animated fadeIn">opal <strong>ADMIN</strong> </h1>
+              <h1 class="animated fadeIn">opal <strong>ADMIN</strong> <span style="font-size: 20px;" ng-if="devMode">DEV</span></h1>
             </div>
           </div>
         </div>    
