--- a/templates/home.html
+++ b/templates/home.html
@@ -129,7 +129,7 @@
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="glyphicon glyphicon-book" aria-hidden="true"></span>     
+												<span style="font-size: 50px;" class="fa fa-pencil-square" aria-hidden="true"></span>     
 											</div>
 											<div class="panel-title">  
 												<h1>Questionnaire</h1>
