--- a/templates/question-add.html
+++ b/templates/question-add.html
@@ -290,7 +290,11 @@
                         <div class="col-md-12">
                             <div class="panel-container">
                                 <form name="newAtForm">
-                                    <div class="col-md-12">
+                                    <div class="col-md-2" style="margin-top:15px; margin-bottom:5px; font-size:20px;">
+                                        <label>Private:  <input type="checkbox" ng-model="newAnswerType.private" ng-true-value="1" ng-false-value="0"></label>
+                                    </div>
+
+                                    <div class="col-md-8">
                                         <select class="form-control" name="atCategory" style="width:60%;" ng-model="atCategory" ng-options="atCat.category_EN for atCat in atCatList" required>
                                                 <option value="">-- select an answer category --</option>
                                         </select>
@@ -320,13 +324,8 @@
 
                                     <div class="col-md-8">
                                         <div class="input-group" style="margin-top:10px; margin-bottom:10px;">
-                                            <input class="form-control" style="width:37.5%" type="text" ng-model="newAnswerType.name_EN" placeholder="New Answer Type (EN)" ng-disabled="!atCategory" required/>
-                                            <input class="form-control" style="width:37.5%" type="text" ng-model="newAnswerType.name_FR" placeholder="New Answer Type (FR)" ng-disabled="!atCategory" required/>
-                                            <select class="form-control" name="catPrivate" style="width:25%" ng-model="newAnswerType.private" ng-disabled="!atCategory" required/>
-                                                <option value="" diabled selected hidden>-- privacy --</option>
-                                                <option value="0">Public</option>
-                                                <option value="1">Private</option>
-                                            </select>
+                                            <input class="form-control" style="width:50%" type="text" ng-model="newAnswerType.name_EN" placeholder="New Answer Type (EN)" ng-disabled="!atCategory" required/>
+                                            <input class="form-control" style="width:50%" type="text" ng-model="newAnswerType.name_FR" placeholder="New Answer Type (FR)" ng-disabled="!atCategory" required/>
                                             <span class="input-group-btn"><button class="btn btn-default" type="submit" ng-click="addNewAt(atCategory)" ng-disabled="newAtForm.$invalid">Add</button></span>
                                         </div>
                                     </div>
