--- Redesigned questionnaire pages to more consistent design of the rest of the website

--- a/templates/questionnaire-manage.html
+++ b/templates/questionnaire-manage.html
@@ -10,11 +10,11 @@
                     <div class="row main-title">
                         <div class="col-md-9 title-content">
                             <span class="fa fa-pencil"></span>
-                            <h1><strong>Manage Questionnaire</strong></h1>
+                            <h1><strong>Manage Questionnaires</strong></h1>
                         </div>
 
                         <div class="col-md-3 title-breadcrumbs">
-                    <a href="#/">Home</a><span class="glyphicon glyphicon-menu-right teflon"></span> <a href="#/questionnaire">Questionnaire</a><span class="glyphicon glyphicon-menu-right teflon"></span><strong>Manage Questionnaire</strong></span>
+                    <a href="#/">Home</a><span class="glyphicon glyphicon-menu-right teflon"></span> <a href="#/questionnaire">Questionnaires</a><span class="glyphicon glyphicon-menu-right teflon"></span><strong>Manage Questionnaires</strong></span>
                         </div>
                     </div>
 
