--- a/templates/questionnaire-side-menu.html
+++ b/templates/questionnaire-side-menu.html
@@ -5,7 +5,7 @@
      		<div class="logo">
         		<img style="margin-top: -20px;" class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="130" width="130">
         	</div>
-        	<h1>opal <strong>ADMIN</strong> </h1>
+        	<h1>opal <strong>ADMIN</strong> <span style="font-size: 20px;" ng-if="devMode">DEV</span></h1>
     	</div>
     </div>
 
@@ -15,7 +15,7 @@
 				<div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire-create'}">
 					<div class="panel-content">
 						<span style="font-size: 23px;vertical-align:middle" class="fa fa-arrow-left" aria-hidden="true"></span>
-						<h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Back to Questionnaire</strong></h6>
+						<h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Back to Questionnaires</strong></h6>
 					</div>
 				</div>
 			</div>
@@ -35,29 +35,18 @@
 
     <div class="row side-panel-menu">
     	<div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">   
-            <div class="panel-container animated" ng-class="{pulse: hoverC, active: currentPage == 'questionnaire-create'}" ng-mouseenter="hoverC=true" ng-mouseleave="hoverC=false" style="cursor:pointer;" ng-click="goToManage()">
-	        	<div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire-manage'}">
+            <div class="panel-container animated" ng-class="{pulse: hoverManageQuestionnaires, active: currentPage == 'questionnaire/manage'}" ng-mouseenter="hoverManageQuestionnaires=true" ng-mouseleave="hoverManageQuestionnaires=false" style="cursor:pointer;" ng-click="goToManage()">
+	        	<div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/manage'}">
 	            	<div class="panel-content">
 		              <span style="font-size: 23px;vertical-align:middle" class="fa fa-pencil" aria-hidden="true"></span>
-		              <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Manage Questionnaire</strong></h6>
+		              <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Manage Questionnaires</strong></h6>
 	            	</div>
 	        	</div>
             </div>
         </div>
-		<!--
         <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">   
-            <div class="panel-container animated" ng-class="{pulse: hoverC, active: currentPage == 'questionnaire-edit'}" ng-mouseenter="hoverC=true" ng-mouseleave="hoverC=false" style="cursor:pointer;" ng-click="goToUpdate()">
-	        	<div class="side-panel-info-md" ng-class="{active: currentPage == 'questionnaire-edit'}">
-	            	<div class="panel-content">
-		              <span style="font-size: 23px;vertical-align:middle" class="fa fa-pencil" aria-hidden="true"></span>
-		              <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>View/Update/Delete Questionnaire</strong></h6>
-	            	</div>
-	        	</div>
-            </div>
-        </div>-->
-        <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">   
-            <div class="panel-container animated" ng-class="{pulse: hoverC, active: currentPage == 'questionnaire-bank'}" ng-mouseenter="hoverC=true" ng-mouseleave="hoverC=false" style="cursor:pointer;" ng-click="goToQuestionBank()">
-	        	<div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire-bank'}">
+            <div class="panel-container animated" ng-class="{pulse: hoverManageQuestions, active: currentPage == 'questionnaire/bank'}" ng-mouseenter="hoverManageQuestions=true" ng-mouseleave="hoverManageQuestions=false" style="cursor:pointer;" ng-click="goToQuestionBank()">
+	        	<div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/bank'}">
 	            	<div class="panel-content">
 		              <span style="font-size: 23px;vertical-align:middle" class="fa fa-search" aria-hidden="true"></span>
 		              <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Manage Questions</strong></h6>
@@ -66,11 +55,11 @@
             </div>
         </div>
         <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">   
-            <div class="panel-container animated" ng-class="{pulse: hoverC, active: currentPage == 'questionnaire-completed'}" ng-mouseenter="hoverC=true" ng-mouseleave="hoverC=false" style="cursor:pointer;" ng-click="goToCompleted()">
-	        	<div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire-completed'}">
+            <div class="panel-container animated" ng-class="{pulse: hoverCompletedQuestionnaires, active: currentPage == 'questionnaire/completed'}" ng-mouseenter="hoverCompletedQuestionnaires=true" ng-mouseleave="hoverCompletedQuestionnaires=false" style="cursor:pointer;" ng-click="goToCompleted()">
+	        	<div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/completed'}">
 	            	<div class="panel-content">
 		              <span style="font-size: 23px;vertical-align:middle" class="fa fa-check" aria-hidden="true"></span>
-		              <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>View Completed</strong></h6>
+		              <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Completed Questionnaires</strong></h6>
 	            	</div>
 	        	</div>
             </div>
