--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -79,7 +79,7 @@
                     </div>
                   </div>
                 </div>
-  			  <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
+  			        <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                   <div class="panel-container animated" ng-class="{pulse: hoverQuestionnaireMenu, active: currentPage == 'questionnaire'}" ng-mouseenter="hoverQuestionnaireMenu=true" ng-mouseleave="hoverQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToQuestionnaire()">
                     <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire'}">
                       <div class="panel-content">
@@ -89,12 +89,13 @@
                     </div>
                   </div>
                 </div>
-  			  <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated" ng-class="{pulse: hoverEmailMenu, active: currentPage == 'email'}" ng-mouseenter="hoverEmailMenu=true" ng-mouseleave="hoverEmailMenu=false" style="cursor:pointer;" ng-click="goToEmail()">
-                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'email'}">
-                    <div class="panel-content">
+  			        <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
+                  <div class="panel-container animated" ng-class="{pulse: hoverEmailMenu, active: currentPage == 'email'}" ng-mouseenter="hoverEmailMenu=true" ng-mouseleave="hoverEmailMenu=false" style="cursor:pointer;" ng-click="goToEmail()">
+                    <div class="side-panel-info-sm" ng-class="{active: currentPage == 'email'}">
+                      <div class="panel-content">
                         <span style="font-size: 21px; vertical-align:middle" class="fa fa-envelope" aria-hidden="true"></span>
                         <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Email</strong></div>
+                      </div>
                     </div>
                   </div>
                 </div>
